# esp-homekit-rs

./: BLE_INIT_ERROR_FIX.md  CLAUDE.md  Cargo.toml  HARDWARE_VALIDATION_CHECKLIST.md  IMPLEMENTATION_LOG.md  IMPROVEMENTS.md  MATTER_SPEC.md  MATTER_SPEC_REQUIREMENTS.md  NVS_IMPROVEMENTS_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PERSISTENCE.md  PHASE_3_KICKOFF.md  PROJECT_DESCRIPTION.md  ROADMAP.md  TESTING_STRATEGY.md  color_control.matter  manual_tests.rs.example
crates/rs-matter-embassy/: Cargo.toml
crates/rs-matter-stack/: Cargo.toml
crates/rs-matter/rs-matter/src/: utils.rs
src/: color_control.rs  credentials.rs  identify.rs  level_control.rs  lib.rs  nvs.rs  util.rs
