[package]
edition = "2021"
name = "esp-homekit"
rust-version = "1.86"
version = "0.1.0"

[lib]
test = false
doctest = false
bench = false

[[bin]]
name = "esp-homekit"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c6",
  "log-04",
  "unstable",
] }
log = "0.4"

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = { version = "0.2.1", features = [] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c6", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "esp-alloc",
  "esp32c6",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = "2.1.1"
trouble-host = { version = "0.1.0", features = ["gatt"] }

rs-matter-embassy = { git = "https://github.com/H1ghBre4k3r/rs-matter-embassy.git", rev = "3b72347204c460f861d0e6b6a2bf16cf23ea14a1", features = [
  "esp",
  "log",
  "embassy-net",
] }
embassy-futures = "0.1.2"
embedded-storage = "0.3.1"
esp-storage = { version = "0.7.0", features = ["esp32c6"] }
embassy-embedded-hal = "0.5.0"
rs-matter = { git = "https://github.com/H1ghBre4k3r/rs-matter.git", rev = "3faa3b40a9412847f13a702dfac696a387257728", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
#strip = true             # Automatically strip symbols from the binary.
#
# [profile.dev.package.rs-matter]
# debug = true
# opt-level = "z"
#
# [profile.release.package.rs-matter]
# opt-level = "z"
#
# [profile.release.package.rs-matter-stack]
# opt-level = "s"
#
# [profile.dev.package.rs-matter-stack]
# debug = true
# opt-level = "z"
#
# [profile.release.package.rs-matter-embassy]
# opt-level = "s"
#
# [profile.dev.package.rs-matter-embassy]
# debug = true
# opt-level = "z"
#
